# imbalance

./: .gitignore  README.md  imbalance_model_metrics.xlsx  pyproject.toml  pytest.ini
imbalance/: imbalance_handler.py  logger.py  main.py  path.py  split_data.py  utils.py
src/: exceptions.py  imbalance_handler.py  main.py  split_data.py  utils.py
tests/: README.md  conftest.py  test_is_imbalance.py  test_kmeans_data_split.py  test_segment_data_split.py
tests/data/: README.md
