[tool.poetry]
name = "imbalance"
version = "0.1.0"
description = "This project is applying multiple imbalance technique and will generate metrics to know which imbalance technique perform with given dataset"
authors = ["ZidaneSunesara <zidanesunesara786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
imbalanced-learn = "^0.12.0"
pandas = "^2.2.1"
pydantic = "^2.6.4"
polars = "^0.20.15"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
